--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,10 @@
     <string name="app_button_simple_pay">Простая оплата</string>
     <string name="app_button_holding_pay">Холдирование</string>
     <string name="app_button_recurrent_pay">Рекуррентная оплата</string>
+    <string name="app_order_hint">Укажите номер заказа</string>
+    <string name="app_hold_title">Холдирование средств</string>
+    <string name="app_hold_confirm">Подтверждение холдирования</string>
+    <string name="app_hold_cancel">Отмена холдирования</string>
+    <string name="app_hold_start">Холдирование</string>
 
 </resources>
