--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="app_hold_confirm">Подтверждение холдирования</string>
     <string name="app_hold_cancel">Отмена холдирования</string>
     <string name="app_hold_start">Холдирование</string>
-
+    <string name="app_hold_confirm_success">Успешное подтверждение холдирования</string>
+    <string name="app_hold_confirm_fail">Ошибка подтверждения холдирования</string>
+    <string name="app_hold_cancel_success">Успешная отмена холдирования</string>
+    <string name="app_hold_cancel_fail">Ошибка отмены холдирования</string>
 </resources>
