--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="app_button_recurrent_pay">Рекуррентная оплата</string>
     <string name="app_button_saving_pay">Оплата по сохраненной карте</string>
     <string name="app_order_hint">Укажите номер заказа</string>
+    <string name="app_sum_hint">Укажите сумму заказа</string>
     <string name="app_hold_title">Обработка холдирования</string>
     <string name="app_hold_confirm">Подтверждение холдирования</string>
     <string name="app_hold_cancel">Отмена холдирования</string>
