--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_button_holding_pay">Холдирование</string>
     <string name="app_button_recurrent_pay">Рекуррентная оплата</string>
     <string name="app_button_saving_pay">Оплата по сохраненной карте</string>
+    <string name="app_button_logs">Скачать логи</string>
     <string name="app_order_hint">Укажите номер заказа</string>
     <string name="app_sum_hint">Укажите сумму заказа</string>
     <string name="app_hold_title">Обработка холдирования</string>
